# learnopencv

./: readme.md
cmake_opencv_example/: CMakeLists.txt  main.cpp
opencv_handle_picture/: CMakeLists.txt  note.md
opencv_handle_picture/apps/: CMakeLists.txt  main.cpp
